// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render 1`] = `
<View
  accessibilityTraits="header"
  style={
    Array [
      Object {
        "backgroundColor": "#F5F5F5",
        "flex": 1,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      Object {
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "#556572",
            "fontSize": 14,
            "fontWeight": "600",
          },
          undefined,
        ],
      ]
    }
  >
    Header
  </Text>
</View>
`;

exports[`render without key 1`] = `
<View
  accessibilityTraits="header"
  style={
    Array [
      Object {
        "backgroundColor": "#F5F5F5",
        "flex": 1,
        "justifyContent": "center",
        "paddingLeft": 16,
        "paddingRight": 8,
        "paddingVertical": 4,
      },
      Object {
        "borderBottomColor": "#C7CDD1",
        "borderBottomWidth": 0.5,
      },
      Object {
        "borderTopColor": "#C7CDD1",
        "borderTopWidth": 0.5,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#2D3B45",
          "fontFamily": "Lato-Regular",
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "#556572",
            "fontSize": 14,
            "fontWeight": "600",
          },
          undefined,
        ],
      ]
    }
  >
    Header
  </Text>
</View>
`;
